Feat/handle erros (#20)
* refact: adiciona classe para melhorar a forma de retorno dos endpoints da aplicação

* refact: adiciona endpoint para ser listado no swagger