@@ -2,8 +2,9 @@ package com.fiap.challenge.parts.useCases.find;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+import com.fiap.challenge.shared.model.ResponseApi;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -21,10 +22,12 @@ public class FindPartsByIdsUseCaseImpl implements FindPartsByIdsUseCase {
 
     @Override
     @Transactional(readOnly = true)
-    public List<PartResponseDTO> execute(List<UUID> ids) {
+    public ResponseApi<List<PartResponseDTO>> execute(List<UUID> ids) {
+        ResponseApi<List<PartResponseDTO>> responseApi = new ResponseApi<>();
         List<PartModel> foundParts = partRepository.findAllById(ids);
 
-        return foundParts.stream()
+        return responseApi.of(HttpStatus.OK, "Peças encontradas com sucesso",
+                foundParts.stream()
                 .map(part -> new PartResponseDTO(
                         part.getId(),
                         part.getName(),
@@ -36,6 +39,6 @@ public class FindPartsByIdsUseCaseImpl implements FindPartsByIdsUseCase {
                         part.getCreatedAt(),
                         part.getUpdatedAt()
                 ))
-                .collect(Collectors.toList());
+                .toList());
     }
 }
